--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apigrate/shipstation",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "ShipStation API wrapper by Apigrate",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/gaumeister/apigrate-shipstation#readme",
   "dependencies": {
+    "@apigrate/logger": "^1.0.3",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "q": "^1.4.1",
